--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -24,10 +24,10 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v3
 
-    - name: Set up JDK 17
+    - name: Set up JDK 11
       uses: actions/setup-java@v4
       with:
-        java-version: '17'
+        java-version: '11'
         distribution: 'adopt-openjdk'
       
     - name: Cache Maven packages
@@ -38,5 +38,9 @@ jobs:
         restore-keys: |
           ${{ runner.os }}-maven-
 
+    - name: List directory
+      run: ls -la
+
     - name: Build with Maven
-      run: mvn clean install
+      run: mvn -B package --file SpringBoot/pom.xml
+
