--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -24,17 +24,17 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v3
 
-    - name: Set up JDK 11
+    - name: Set up JDK 17
       uses: actions/setup-java@v4
       with:
-        java-version: '11'
+        java-version: '17'
         distribution: 'adopt-openjdk'
       
     - name: Cache Maven packages
       uses: actions/cache@v3
       with:
         path: ~/.m2/repository
-        key: ${{ runner.os }}-maven-${{ hashFiles('**SpringBoot/pom.xml') }}
+        key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
         restore-keys: |
           ${{ runner.os }}-maven-
 
@@ -42,5 +42,5 @@ jobs:
       run: ls -la
 
     - name: Build with Maven
-      run: mvn -B package --file SpringBoot/pom.xml
+      run: mvn -B package
 
