--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -34,7 +34,7 @@ jobs:
       uses: actions/cache@v3
       with:
         path: ~/.m2/repository
-        key: ${{ runner.os }}-maven-${{ hashFiles('**/SpringBoot/pom.xml') }}
+        key: ${{ runner.os }}-maven-${{ hashFiles('**pom.xml') }}
         restore-keys: |
           ${{ runner.os }}-maven-
 
@@ -42,5 +42,5 @@ jobs:
       run: ls -la
 
     - name: Build with Maven
-      run: mvn -B package
+      run: mvn -B package --file pom.xml
 
