--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -41,5 +41,9 @@ jobs:
     - name: List directory
       run: ls -la
 
+    - name: List subdirectories
+      run: |
+        find . -type d -print
+
     - name: Build with Maven
-      run: mvn -B package --file pom.xml
+      run: mvn -B package --file SpringBoot/pom.xml
