--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -6,7 +6,7 @@
 # separate terms of service, privacy policy, and support
 # documentation.
 
-name: Java CI with Maven
+name: Java CI
 
 on:
   push:
@@ -18,31 +18,31 @@ on:
 
 jobs:
   build:
+
     runs-on: ubuntu-latest
 
     steps:
     - name: Checkout code
       uses: actions/checkout@v3
 
-    - name: Set up JDK 17
-      uses: actions/setup-java@v4
+    - name: Set up JDK
+      uses: actions/setup-java@v3
       with:
-        java-version: '17'
-        distribution: 'adopt-openjdk'
-      
-    - name: Cache Maven packages
-      uses: actions/cache@v3
-      with:
-        path: ~/.m2/repository
-        key: ${{ runner.os }}-maven-${{ hashFiles('SpringBoot/pom.xml') }}
-        restore-keys: |
-          ${{ runner.os }}-maven-
-
-    - name: List root directory
-      run: ls -la
-
-    - name: List SpringBoot directory
-      run: ls -la SpringBoot
+        java-version: '17' # Specify the version of Java to use
 
     - name: Build with Maven
-      run: mvn -B package --file SpringBoot/pom.xml
+      run: mvn clean install --fail-never
+
+    - name: Run tests
+      run: mvn test
+
+    - name: Package application
+      run: mvn package
+
+    - name: Upload JAR file as artifact
+      uses: actions/upload-artifact@v3
+      with:
+        name: my-app
+        path: target/*.jar
+
+    # Optional: Deploy or additional steps can be added here
