--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -6,7 +6,7 @@
 # separate terms of service, privacy policy, and support
 # documentation.
 
-name: Java CI
+name: Java CI with Maven
 
 on:
   push:
@@ -18,31 +18,30 @@ on:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v3
+      - name: Checkout code
+        uses: actions/checkout@v2
 
-    - name: Set up JDK
-      uses: actions/setup-java@v3
-      with:
-        java-version: '17' # Specify the version of Java to use
+      - name: Set up JDK 17
+        uses: actions/setup-java@v3
+        with:
+          distribution: 'adopt'
+          java-version: '17'
 
-    - name: check Maven Version
-      run: mvn --version
-      
-    - name: Build with Maven
-      run: mvn -f SpringBoot/pom.xml clean install
-      
-    - name: Package application
-      run: mvn package
+      - name: Cache Maven packages
+        uses: actions/cache@v2
+        with:
+          path: ~/.m2/repository
+          key: ${{ runner.os }}-maven-${{ hashFiles('SpringBoot/pom.xml') }}
+          restore-keys: |
+            ${{ runner.os }}-maven-
 
-    - name: Upload JAR file as artifact
-      uses: actions/upload-artifact@v3
-      with:
-        name: my-app
-        path: target/*.jar
+      - name: Build with Maven
+        working-directory: SpringBoot
+        run: mvn clean install
 
-    # Optional: Deploy or additional steps can be added here
+      - name: Run tests
+        working-directory: SpringBoot
+        run: mvn test
