--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -34,14 +34,17 @@ jobs:
         uses: actions/cache@v2
         with:
           path: ~/.m2/repository
-          key: ${{ runner.os }}-maven-${{ hashFiles('SpringBoot/pom.xml') }}
+          key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
           restore-keys: |
             ${{ runner.os }}-maven-
 
-      - name: Build with Maven
+      - name: Navigate to SpringBoot project
         working-directory: SpringBoot
+
+      - name: Build with Maven
         run: mvn clean install
+        working-directory: SpringBoot
 
       - name: Run tests
-        working-directory: SpringBoot
         run: mvn test
+        working-directory: SpringBoot
