--- a/SpringBoot/src/main/resources/application.properties
+++ b/SpringBoot/src/main/resources/application.properties
@@ -1,11 +1,11 @@
 spring.mvc.view.prefix=/WEB-INF/views/
 spring.mvc.view.suffix=.jsp
 
-spring.datasource.url=jdbc:mysql://localhost:3306/practice
+spring.datasource.url=jdbc:mysql://172.17.0.2:3306/practice
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.username=guna
+spring.datasource.password=guna@1432
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.profiles.active=dev
 
